--- a/src/main/resources/templates/po.html
+++ b/src/main/resources/templates/po.html
@@ -1,270 +1,264 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="UTF-8"/>
     <meta
-      name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            name="viewport"
+            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Document</title>
 
     <style>
-      * {
-        font-family: "Lato", "WeiRuanYaHei";
-      }
-      body {
-        padding: 0;
-        margin: 0;
-      }
-      .logo {
-        overflow: hidden;
-        margin-bottom: 30px;
-      }
-      .image {
-        float: left;
-        width: 120px;
-        height: 120px;
-        border: 1px solid #5c5c5c;
-
-      }
-      .so {
-        float: right;
-        width: 40%;
-        font-size: 24px;
-        color: #0053a1;
-        line-height: 120px;
-      }
-      .detail {
-        font-size: 16px;
-        overflow: hidden;
-      }
-      .left {
-        width: 60%;
-        float: left;
-      }
-      .right {
-        width: 40%;
-        float: right;
-      }
-      .left .item,
-      .right .item {
-        clear:both;
-        height: 50px;
-        overflow: hidden;
-      }
-      .left .item .key, .right .item .key {
-        height: 50px;
-        float: left;
-        margin-right: 4px;
-      }
-      .split {
-        width: 100%;
-        height: 1px;
-        background-color: #004fc1;
-        clear: both;
-      }
-      .from {
-        margin-bottom: 15px;
-        font-size: 16px;
-        clear: both;
-      }
-      .from .company {
-        float: left;
-        display: inline-block;
-         margin-top: 15px;
-      }
-      .from .address {
-        float: left;
-        display: inline-block;
-         margin-top: 15px;
-      }
-      .from .toCompany {
-        font-weight: 700;
-        margin-right: 50px;
-        color: #004fc1;
-      }
-      .tableContainer {
-        width: 100%;
-        border-collapse: collapse;
-        border-left: 1px solid #C2C2C2;
-        border-right: 1px solid #C2C2C2;
-        -fs-table-paginate: paginate;
-        -fs-page-break-min-height: 1.5cm;
-      }
-      .tableContainer thead tr th:nth-child(1) {
-        width: 30px;
-      }
-      .tableContainer td,
-      .tableContainer th {
-        font-size: 14px;
-        padding: 3px 7px 2px 7px;
-      }
-      .tableContainer th {
-        font-size: 16px;
-        text-align: left;
-        background-color: #063A86;
-        color: #ffffff;
-        height: 44px;
-      }
-      .tableContainer tr td {
-        height: 44px;
-        text-align: left;
-        color: #979797;
-        border-bottom: 1px solid #C2C2C2;
-      }
-      .bottom {
-        clear:both;
-        margin-top: 25px;
-      }
-      .bottom .comment {
-        float: left;
-        width: 60%;
-        border: 1px solid #004FC1;
-        border-radius: 2px;
-        padding: 10px;
-        margin-right: 20px;
-        height: 200px;
-      }
-      .bottom .moneys {
-        float: left;
-      }
-      .bottom .moneys .moneyItem {
-        font-size: 16px;
-      }
-      .bottom .moneys .moneyItem {
-        margin-bottom: 20px;
-      }
-      .bottom .moneys .moneyItem .name {
-        width: 120px; 
-        text-align: right;
-        display: inline-block;
-      }
-      .bottom .moneys .moneyItem .price {
-        margin-left: 10px;
-      }
-      .ending {
-        clear: both;
-        margin-top: 40px;
-      }
+        * {
+          font-family: "Lato", "WeiRuanYaHei";
+        }
+        body {
+          padding: 0;
+          margin: 0;
+        }
+        .logo {
+          overflow: hidden;
+          margin-bottom: 30px;
+        }
+        .so {
+          float: right;
+          width: 40%;
+          font-size: 24px;
+          color: #0053a1;
+          line-height: 120px;
+        }
+        .detail {
+          font-size: 16px;
+          overflow: hidden;
+        }
+        .left {
+          width: 60%;
+          float: left;
+        }
+        .right {
+          width: 40%;
+          float: right;
+        }
+        .left .item,
+        .right .item {
+          clear:both;
+          height: 50px;
+          overflow: hidden;
+        }
+        .left .item .key, .right .item .key {
+          height: 50px;
+          float: left;
+          margin-right: 4px;
+        }
+        .split {
+          width: 100%;
+          height: 1px;
+          background-color: #004fc1;
+          clear: both;
+        }
+        .from {
+          display: flex;
+          margin-bottom: 15px;
+          font-size: 16px;
+        }
+        .from .company {
+           flex-shrink: 0;
+           margin-top: 15px;
+        }
+        .from .address {
+          display: inline-block;
+          margin-top: 15px;
+        }
+        .from .toCompany {
+          font-weight: 700;
+          margin-right: 50px;
+          color: #004fc1;
+        }
+        .tableContainer {
+          width: 100%;
+          border-collapse: collapse;
+          border-left: 1px solid #C2C2C2;
+          border-right: 1px solid #C2C2C2;
+          -fs-table-paginate: paginate;
+          -fs-page-break-min-height: 1.5cm;
+          page-break-inside:auto;
+        }
+        .tableContainer thead tr th:nth-child(1) {
+          width: 30px;
+        }
+        .tableContainer td,
+        .tableContainer th {
+          font-size: 14px;
+          padding: 3px 7px 2px 7px;
+        }
+        .tableContainer th {
+          font-size: 16px;
+          text-align: left;
+          background-color: #063A86;
+          color: #ffffff;
+          height: 44px;
+        }
+        .tableContainer tr td {
+          height: 44px;
+          text-align: left;
+          color: #979797;
+          border-bottom: 1px solid #C2C2C2;
+        }
+        .bottom {
+          clear:both;
+          margin-top: 25px;
+        }
+        .bottom .comment {
+          float: left;
+          width: 60%;
+          border: 1px solid #004FC1;
+          padding: 10px;
+          margin-right: 20px;
+          height: 200px;
+        }
+        .bottom .moneys {
+          float: left;
+        }
+        .bottom .moneys .moneyItem {
+          font-size: 16px;
+        }
+        .bottom .moneys .moneyItem {
+          margin-bottom: 20px;
+        }
+        .bottom .moneys .moneyItem .name {
+          width: 120px;
+          text-align: right;
+          display: inline-block;
+        }
+        .bottom .moneys .moneyItem .price {
+          margin-left: 10px;
+        }
+        .ending {
+          clear: both;
+          margin-top: 40px;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <div class="container">
-      <div class="logo">
-        <img th:src="${logo}" style="object-fit: cover; height: 120px;"/>
+<body>
+<div class="container">
+    <div class="logo">
+        <img th:src="${logo}" style="object-fit: cover; height: 120px;float: left;"/>
         <div class="so">Purchase Order</div>
-      </div>
-      <div class="detail">
+    </div>
+    <div class="detail">
         <div class="left">
-          <div class="item">
-            <div class="key">From:</div>
-            <div class="value" th:text="${name}"></div>
-          </div>
-          <div class="item">
-            <div class="key">Address:</div>
-            <div class="value" th:text="${address}"></div>
-          </div>
-          <div class="item">
-            <div class="key">Email:</div>
-            <div class="value" th:text="${email}"></div>
-          </div>
-          <div class="item">
-            <div class="key" th:if="${tel != null}">TEL:</div>
-            <div class="value" th:if="${tel != null}" th:text="${tel}"></div>
-          </div>
+            <div class="item">
+                <div class="key">From:</div>
+                <div class="value" th:text="${name}"></div>
+            </div>
+            <div class="item">
+                <div class="key">Address:</div>
+                <div class="value" th:text="${address}"></div>
+            </div>
+            <div class="item">
+                <div class="key">Email:</div>
+                <div class="value" th:text="${email}"></div>
+            </div>
+            <div class="item">
+                <div class="key" th:if="${tel != null}">TEL:</div>
+                <div class="value" th:if="${tel != null}" th:text="${tel}"></div>
+            </div>
         </div>
         <div class="right">
-          <div class="item">
-            <div class="key">Order No.:</div>
-            <div class="value" th:text="${orderNo}"></div>
-          </div>
-          <div class="item">
-            <div class="key">Order Date:</div>
-            <div class="value" th:text="${orderDate}"></div>
-          </div>
-          <div class="item">
-            <div class="key">Reference No.:</div>
-            <div class="value" th:text="${referenceNumber}"></div>
-          </div>
-          <div class="item">
-            <div class="key">Payment Term:</div>
-            <div class="value" th:text="${paymentTerm}"></div>
-          </div>
+            <div class="item">
+                <div class="key">Order No.:</div>
+                <div class="value" th:text="${orderNo}"></div>
+            </div>
+            <div class="item">
+                <div class="key">Order Date:</div>
+                <div class="value" th:text="${orderDate}"></div>
+            </div>
+            <div class="item">
+                <div class="key">Reference No.:</div>
+                <div class="value" th:text="${referenceNumber}"></div>
+            </div>
+            <div class="item">
+                <div class="key">Payment Term:</div>
+                <div class="value" th:text="${paymentTerm}"></div>
+            </div>
         </div>
-      </div>
-      <div class="split"></div>
-      <div class="from">
+    </div>
+    <div class="split"></div>
+    <div class="from">
         <div class="company">
-          <span>From:</span>
-          <span class="toCompany" th:text="${from}"></span>
+            <span>From:</span>
+            <span class="toCompany" th:text="${from}"></span>
         </div>
         <div class="address">
-          <div>
-            <span>Ship to:</span>
-            <span th:text="${shipTo}"></span>
-          </div>
-          <div style="margin-top: 10px;">
-            <span>Bill to:</span>
-            <span th:text="${billTo}"></span>
-          </div>
+            <div>
+                <span>Ship to:</span>
+                <span th:text="${shipTo}"></span>
+            </div>
+            <div style="margin-top: 10px;">
+                <span>Bill to:</span>
+                <span th:text="${billTo}"></span>
+            </div>
         </div>
-      </div>
-      <div style="clear:both;height: 1px;"></div>
-      <table class="tableContainer">
-        <thead>
-          <tr>
-            <th></th>
-            <th>SKU Name</th>
-            <th>SKU No.</th>
-            <th>Purchase QTY</th>
-            <th>Unit Price</th>
-            <th>Net Total Amount</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr th:each="sku : ${skus}">
-            <td th:text="${sku.order}"></td>
-            <td th:text="${sku.skuName}"></td>
-            <td th:text="${sku.skuNumber}"></td>
-            <td th:text="${sku.salesQty}"></td>
-            <td th:text="${currencyCode} + ' ' +${sku.unitPrice}"></td>
-            <td th:text="${currencyCode} + ' '+ ${sku.amount}"></td>
-          </tr>
-        </tbody>
-      </table>
-      <div th:style="${skus.size()} >= 6 and ${skus.size()} <= 11 ?'page-break-after: always;' : ''"></div>
-      <div th:style="${skus.size()} >= 27 and ${skus.size()} <= 32 ?'page-break-after: always;' : ''"></div>
-      <div class="bottom">
+    </div>
+    <div style="clear:both;height: 1px;"></div>
+    <div th:each="range: ${splitStartEndFlag}">
+        <table class="tableContainer" th:if="${skus.size()} >= ${range[0]}">
+            <thead>
+            <tr>
+                <th></th>
+                <th>SKU Name</th>
+                <th>SKU No.</th>
+                <th>Purchase QTY</th>
+                <th>Unit Price</th>
+                <th>Net Total Amount</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr th:each="sku : ${skus}" th:if="${sku.order} >= ${range[0]} and ${sku.order} < ${range[1]}">
+                <td th:text="${sku.order}"></td>
+                <td th:text="${sku.skuName}"></td>
+                <td th:text="${sku.skuNumber}"></td>
+                <td th:text="${sku.salesQty}"></td>
+                <td th:text="${currencyCode} + ' ' +${sku.unitPrice}"></td>
+                <td th:text="${currencyCode} + ' '+ ${sku.amount}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+    <div th:each="range: ${splitStartEndFlag}">
+        <div th:style="${skus.size()} >= (${range[1]} - 6) and ${skus.size()} < ${range[1]} ?'page-break-after: always;' : ''"></div>
+    </div>
+    <div class="bottom">
         <div class="comment" th:text="${soNote}"></div>
         <div class="moneys">
-          <div class="moneyItem">
-            <span class="name">Net Amount:</span>
-            <span class="price" th:text="${netAmount}"></span>
-          </div>
-          <div class="moneyItem">
-            <span class="name">GST/HST:</span>
-            <span class="price" th:text="${gst_hstAmount}"></span>
-          </div>
-          <div class="moneyItem">
-            <span class="name">QST:</span>
-            <span class="price" th:text="${qstAmount}"></span>
-          </div>
-          <div class="moneyItem">
-            <span class="name">PST:</span>
-            <span class="price" th:text="${pstAmount}"></span>
-          </div>
-          <div class="moneyItem">
-            <span class="name">Tax Subtotal:</span>
-            <span class="price" th:text="${taxTotal}"></span>
-          </div>
-          <div class="moneyItem">
-            <span class="name">TOTAL CAD:</span>
-            <span class="price" th:text="${totalCad}"></span>
-          </div>
+            <div class="moneyItem">
+                <span class="name">Net Amount:</span>
+                <span class="price" th:text="${netAmount}"></span>
+            </div>
+            <div class="moneyItem">
+                <span class="name">GST/HST:</span>
+                <span class="price" th:text="${gst_hstAmount}"></span>
+            </div>
+            <div class="moneyItem">
+                <span class="name">QST:</span>
+                <span class="price" th:text="${qstAmount}"></span>
+            </div>
+            <div class="moneyItem">
+                <span class="name">PST:</span>
+                <span class="price" th:text="${pstAmount}"></span>
+            </div>
+            <div class="moneyItem">
+                <span class="name">Tax Subtotal:</span>
+                <span class="price" th:text="${taxTotal}"></span>
+            </div>
+            <div class="moneyItem">
+                <span class="name">TOTAL CAD:</span>
+                <span class="price" th:text="${totalCad}"></span>
+            </div>
         </div>
-      </div>
-      <div class="ending" th:text="${ending}">Thank you for your business</div>
     </div>
-  </body>
+    <div class="ending" th:text="${ending}">Thank you for your business</div>
+</div>
+</body>
 </html>
