Fix: pdf default config

--- a/src/main/resources/templates/po.html
+++ b/src/main/resources/templates/po.html
@@ -258,7 +258,7 @@
             </div>
         </div>
     </div>
-    <div class="ending" th:text="${ending}">Thank you for your business</div>
+    <div class="ending" th:text="${ending}">Thank you for your business!</div>
 </div>
 </body>
 </html>
