--- a/src/main/resources/templates/po.html
+++ b/src/main/resources/templates/po.html
@@ -18,7 +18,7 @@
         }
         .logo {
           overflow: hidden;
-          margin-bottom: 30px;
+          margin-bottom: 20px;
         }
         .so {
           float: right;
@@ -42,11 +42,11 @@
         .left .item,
         .right .item {
           clear:both;
-          height: 50px;
+          height: 44px;
           overflow: hidden;
         }
         .left .item .key, .right .item .key {
-          height: 50px;
+          height: 44px;
           float: left;
           margin-right: 4px;
         }
@@ -96,10 +96,10 @@
           text-align: left;
           background-color: #063A86;
           color: #ffffff;
-          height: 44px;
+          height: 30px;
         }
         .tableContainer tr td {
-          height: 44px;
+          height: 30px;
           text-align: left;
           color: #979797;
           border-bottom: 1px solid #C2C2C2;
@@ -114,7 +114,7 @@
           border: 1px solid #004FC1;
           padding: 10px;
           margin-right: 20px;
-          height: 200px;
+          height: 160px;
         }
         .bottom .moneys {
           float: left;
@@ -123,7 +123,7 @@
           font-size: 16px;
         }
         .bottom .moneys .moneyItem {
-          margin-bottom: 20px;
+          margin-bottom: 12px;
         }
         .bottom .moneys .moneyItem .name {
           width: 120px;
@@ -135,7 +135,7 @@
         }
         .ending {
           clear: both;
-          margin-top: 40px;
+          margin-top: 30px;
         }
     </style>
 </head>
@@ -219,7 +219,7 @@
                 <td th:text="${sku.order}"></td>
                 <td th:text="${sku.skuName}"></td>
                 <td th:text="${sku.skuNumber}"></td>
-                <td th:text="${sku.salesQty}"></td>
+                <td th:text="${sku.salesQty} + ' ' +${sku.uom}"></td>
                 <td th:text="${currencyCode} + ' ' +${sku.unitPrice}"></td>
                 <td th:text="${currencyCode} + ' '+ ${sku.amount}"></td>
             </tr>
