--- a/src/main/resources/templates/so.html
+++ b/src/main/resources/templates/so.html
@@ -239,7 +239,7 @@
             </div>
         </div>
     </div>
-    <div class="ending" th:text="${ending}">Thank you for your business!</div>
+    <div class="ending" th:utext="${ending}">Thank you for your business!</div>
 </div>
 </body>
 </html>
